--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -776,6 +776,10 @@
     "translation": "CF_NAME create-user NOM_UTILISATEUR MOT_DE_PASSE"
   },
   {
+    "id": "CF_NAME create-user USERNAME PASSWORD \\n   CF_NAME create-user USERNAME --origin ORIGIN",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME create-user-provided-service SERVICE_INSTANCE [-p CREDENTIALS] [-l SYSLOG_DRAIN_URL] [-r ROUTE_SERVICE_URL]\n\n   Pass comma separated credential parameter names to enable interactive mode:\n   CF_NAME create-user-provided-service SERVICE_INSTANCE -p \"comma, separated, parameter, names\"\n\n   Pass credential parameters as JSON to create a service non-interactively:\n   CF_NAME create-user-provided-service SERVICE_INSTANCE -p '{\"key1\":\"value1\",\"key2\":\"value2\"}'\n\n   Specify a path to a file containing JSON:\n   CF_NAME create-user-provided-service SERVICE_INSTANCE -p PATH_TO_FILE",
     "translation": "CF_NAME create-user-provided-service INSTANCE_SERVICE [-p DONNEES_IDENTIFICATION] [-l URL_ENVOI_SYSLOG] [-r URL_SERVICE_ROUTE]\n\n  Transmettez des noms de paramètre de données d'identification séparés par une virgule afin d'activer le mode interactif : \n  CF_NAME create-user-provided-service INSTANCE_SERVICE -p \"noms, paramètre, séparés, virgule\"\n\n   Transmettez des paramètres de données d'identification sous forme d'objets JSON afin de créer un service de façon non interactive :\n   CF_NAME create-user-provided-service INSTANCE_SERVICE -p '{\"clé1\":\"valeur1\",\"clé2\":\"valeur2\"}'\n\n   Spécifiez un chemin d'accès à un fichier contenant des objets JSON :\n   CF_NAME create-user-provided-service INSTANCE_SERVICE -p CHEMIN_FICHIER"
   },
@@ -3312,6 +3316,10 @@
     "translation": "Syntaxe incorrecte :"
   },
   {
+    "id": "Incorrect Usage: the required argument `{{.ArgumentName}}` was not provided",
+    "translation": ""
+  },
+  {
     "id": "Incorrect json format: file: {{.JSONFile}}\n\t\t\nValid json file example:\n[\n  {\n    \"protocol\": \"tcp\",\n    \"destination\": \"10.244.1.18\",\n    \"ports\": \"3306\"\n  }\n]",
     "translation": "Format json incorrect : fichier : {{.JSONFile}}\n\t\t\nExemple de fichier json valide :\n[\n  {\n    \"protocol\": \"tcp\",\n \"destination\": \"10.244.1.18\",\n    \"ports\": \"3306\"\n  }\n]"
   },
@@ -3986,6 +3994,10 @@
   {
     "id": "Organization",
     "translation": "Organisation"
+  },
+  {
+    "id": "Origin for mapping a user account to a user in an external identity provider",
+    "translation": ""
   },
   {
     "id": "Override path to default config directory",
