--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -776,6 +776,10 @@
     "translation": "CF_NAME create-user NOMEUTENTE PASSWORD"
   },
   {
+    "id": "CF_NAME create-user USERNAME PASSWORD \\n   CF_NAME create-user USERNAME --origin ORIGIN",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME create-user-provided-service SERVICE_INSTANCE [-p CREDENTIALS] [-l SYSLOG_DRAIN_URL] [-r ROUTE_SERVICE_URL]\n\n   Pass comma separated credential parameter names to enable interactive mode:\n   CF_NAME create-user-provided-service SERVICE_INSTANCE -p \"comma, separated, parameter, names\"\n\n   Pass credential parameters as JSON to create a service non-interactively:\n   CF_NAME create-user-provided-service SERVICE_INSTANCE -p '{\"key1\":\"value1\",\"key2\":\"value2\"}'\n\n   Specify a path to a file containing JSON:\n   CF_NAME create-user-provided-service SERVICE_INSTANCE -p PATH_TO_FILE",
     "translation": "CF_NAME create-user-provided-service ISTANZA_DEL_SERVIZIO [-p CREDENZIALI] [-l URL_DI_SCARICO_SYSLOG] [-r URL_SERVIZIO_ROTTA]\n\n   Passa i nomi di parametro credenziali separati da virgole per abilitare la modalità interattiva:\n   CF_NAME create-user-provided-service ISTANZA_SERVIZIO -p \"nomi, parametro, separati, da, virgole\"\n\n   Passa i parametri credenziali come JSON per creare un servizio in modo non interattivo:\n   CF_NAME create-user-provided-service ISTANZA_DEL_SERVIZIO -p '{\"chiave1\":\"valore1\",\"chiave2\":\"valore2\"}'\n\n   Specifica un percorso a un file che contiene JSON:\n   CF_NAME create-user-provided-service ISTANZA_DEL_SERVIZIO -p PERCORSO_AL_FILE"
   },
@@ -3312,6 +3316,10 @@
     "translation": "Utilizzo non corretto:"
   },
   {
+    "id": "Incorrect Usage: the required argument `{{.ArgumentName}}` was not provided",
+    "translation": ""
+  },
+  {
     "id": "Incorrect json format: file: {{.JSONFile}}\n\t\t\nValid json file example:\n[\n  {\n    \"protocol\": \"tcp\",\n    \"destination\": \"10.244.1.18\",\n    \"ports\": \"3306\"\n  }\n]",
     "translation": "Formato json non corretto: file: {{.JSONFile}}\n\t\t\nEsempio di file json valido:\n[\n  {\n    \"protocol\": \"tcp\",\n    \"destination\": \"10.244.1.18\",\n    \"ports\": \"3306\"\n  }\n]"
   },
@@ -3986,6 +3994,10 @@
   {
     "id": "Organization",
     "translation": "Organizzazione"
+  },
+  {
+    "id": "Origin for mapping a user account to a user in an external identity provider",
+    "translation": ""
   },
   {
     "id": "Override path to default config directory",
