v3 commands verify minimum API version
[#132564563]
Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -1772,6 +1772,10 @@
     "translation": ""
   },
   {
+    "id": "This command requires CF API version {{.MinimumVersion}}. Your target is {{.CurrentVersion}}.",
+    "translation": ""
+  },
+  {
     "id": "This is for backwards compatibility",
     "translation": ""
   },
@@ -1864,10 +1868,6 @@
     "translation": "name:"
   },
   {
-    "id": "order_by",
-    "translation": ""
-  },
-  {
     "id": "repo-plugins",
     "translation": "repo-plugins"
   },
@@ -1898,6 +1898,10 @@
   {
     "id": "timeout connecting to log server, no log will be shown",
     "translation": "timeout connecting to log server, no log will be shown"
+  },
+  {
+    "id": "uaa",
+    "translation": ""
   },
   {
     "id": "user {{.User}} already exists",
