--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -1780,6 +1780,10 @@
     "translation": ""
   },
   {
+    "id": "This command requires CF API version {{.MinimumVersion}}. Your target is {{.CurrentVersion}}.",
+    "translation": ""
+  },
+  {
     "id": "This is for backwards compatibility",
     "translation": ""
   },
@@ -1888,10 +1892,6 @@
     "translation": "name:"
   },
   {
-    "id": "order_by",
-    "translation": ""
-  },
-  {
     "id": "org",
     "translation": "org"
   },
@@ -1934,6 +1934,10 @@
   {
     "id": "timeout connecting to log server, no log will be shown",
     "translation": "timeout connecting to log server, no log will be shown"
+  },
+  {
+    "id": "uaa",
+    "translation": ""
   },
   {
     "id": "user {{.User}} already exists",
