refactor delete-org command
- added integration tests

[finish #126256675]

Signed-off-by: Nick Wei <nwei@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -2128,6 +2128,10 @@
     "translation": "Löschen von Schlüssel {{.ServiceKeyName}} für Serviceinstanz {{.ServiceInstanceName}} als {{.CurrentUser}}..."
   },
   {
+    "id": "Deleting org {{.OrgName}} as {{.UserName}}...",
+    "translation": ""
+  },
+  {
     "id": "Deleting org {{.OrgName}} as {{.Username}}...",
     "translation": "Löschen von Organisation {{.OrgName}} als {{.Username}}..."
   },
