--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -728,6 +728,10 @@
     "translation": ""
   },
   {
+    "id": "Deleting org {{.OrgName}} as {{.UserName}}...",
+    "translation": ""
+  },
+  {
     "id": "Deleting route {{.Route}} ...",
     "translation": ""
   },
