--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -740,6 +740,10 @@
     "translation": ""
   },
   {
+    "id": "Deleting org {{.OrgName}} as {{.UserName}}...",
+    "translation": ""
+  },
+  {
     "id": "Deleting route {{.Route}} ...",
     "translation": ""
   },
