--- a/cf/i18n/resources/zh-hans.all.json
+++ b/cf/i18n/resources/zh-hans.all.json
@@ -2128,6 +2128,10 @@
     "translation": "正在以 {{.CurrentUser}} 身份删除服务实例 {{.ServiceInstanceName}} 的密钥 {{.ServiceKeyName}}..."
   },
   {
+    "id": "Deleting org {{.OrgName}} as {{.UserName}}...",
+    "translation": ""
+  },
+  {
     "id": "Deleting org {{.OrgName}} as {{.Username}}...",
     "translation": "正在以 {{.Username}} 身份删除组织 {{.OrgName}}..."
   },
