--- a/cf/i18n/resources/zh-hant.untranslated.json
+++ b/cf/i18n/resources/zh-hant.untranslated.json
@@ -1148,6 +1148,10 @@
     "translation": ""
   },
   {
+    "id": "Deleting org {{.OrgName}} as {{.UserName}}...",
+    "translation": ""
+  },
+  {
     "id": "Deleting route {{.Route}} ...",
     "translation": ""
   },
