--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -2424,6 +2424,10 @@
     "translation": "Fehler beim Löschen der Domäne {{.DomainName}}\n{{.Err}}"
   },
   {
+    "id": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead.",
+    "translation": ""
+  },
+  {
     "id": "Error disabling ssh support for ",
     "translation": "Fehler beim Löschen der SSH-Unterstützung für "
   },
