--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -2424,6 +2424,10 @@
     "translation": "Error deleting domain {{.DomainName}}\n{{.Err}}"
   },
   {
+    "id": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead.",
+    "translation": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead."
+  },
+  {
     "id": "Error disabling ssh support for ",
     "translation": "Error disabling ssh support for "
   },
