--- a/cf/i18n/resources/ja-jp.all.json
+++ b/cf/i18n/resources/ja-jp.all.json
@@ -2424,6 +2424,10 @@
     "translation": "ドメイン {{.DomainName}} の削除時にエラーが発生しました\n{{.Err}}"
   },
   {
+    "id": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead.",
+    "translation": ""
+  },
+  {
     "id": "Error disabling ssh support for ",
     "translation": "次のものに対する SSH サポートを無効にしようとしたときエラーが発生しました: "
   },
