--- a/cf/i18n/resources/ko-kr.all.json
+++ b/cf/i18n/resources/ko-kr.all.json
@@ -2424,6 +2424,10 @@
     "translation": "{{.DomainName}} 도메인 삭제 중에 오류 발생\n{{.Err}}"
   },
   {
+    "id": "Error deleting user {{.Username}} \nMultiple users with that username returned. Please use 'cf curl' with specific origin instead.",
+    "translation": ""
+  },
+  {
     "id": "Error disabling ssh support for ",
     "translation": "대상에 대한 SSH 지원 사용 안함 설정 중에 오류가 발생한 대상 "
   },
